--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ##                !!! STOP. DO NOT MODIFY BELOW THIS LINE. !!!
 ## =============================================================================
 
+.vscode/
 
 ### https://raw.github.com/github/gitignore/master/Global/OSX.gitignore
 
@@ -10,7 +11,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
